InternexDev_Sandbox/src/objects/WebCash_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Store configuration parameter for WebCash upload</description>
    <fields>
        <fullName>Adjusted_Against_AP_Account_Key__c</fullName>
        <label>Adjusted Against AP Account Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_Debt_Account_Key__c</fullName>
        <label>Bad Debt Account Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Charges_Account_Key__c</fullName>
        <label>Bank Charges Account Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Format__c</fullName>
        <label>Date Format</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Column_Text__c</fullName>
        <label>Description Column Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LD_Write_Off_Account_Key__c</fullName>
        <label>LD Write Off Account Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_History_Fields__c</fullName>
        <label>Payment History Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Acccount_Key__c</fullName>
        <label>Refund Acccount Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Small_Amount_WriteOff_CurrencyCode__c</fullName>
        <label>Small Amount WriteOff CurrencyCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Small_Amount_Write_Back_Amount__c</fullName>
        <label>Small Amount Write Back Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Small_Amount_Write_off_Amount__c</fullName>
        <label>Small Amount Write off Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Small_Amount_write_off_Account_Key__c</fullName>
        <label>Small Amount write off Account Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspense_Acccount_Key__c</fullName>
        <label>Suspense Acccount Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDS_Account_Key__c</fullName>
        <label>TDS Account Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDS_Write_off_Account_Key__c</fullName>
        <label>TDS Write off Account Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Write_Back_Account_Key__c</fullName>
        <label>Write Back Account Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Write_off_Account_Key__c</fullName>
        <label>Write off Account Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WebCash Configuration</label>
</CustomObject>